/*
 * $Id: ChangeLog,v 1.163 2002/04/21 01:39:15 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-04-22 18:23 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    + #define HB_MAX_ENUMERATIONS 16

  * include/hbpcode.h
  * source/compiler/genc.c
  * source/compiler/hbfix.c
  * source/compiler/hbpcode.c
    + Added support for new HB_P_FOREACH, HB_P_ENUMERATE, HB_P_ENDENUMERATE

  * source/compiler/harbour.slx
  * source/compiler/harbour.sly
  * source/vm/hvm.c
    + Added support for new syntax:
      FOR EACH <id> IN <Arrayr>|<Object>
         [...]
      NEXT

      Note: FOR EACH may be nested up-to HB_MAX_ENUMERATIONS levels deep.

  /*
     This allows for automatic enumeration of all elements in an Array, and/or all Properties of an Object.
  */

2002-04-20 18:23 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    + #define HB_MAX_WITH_OBJECTS 16

  * include/hbcomp.h
  * source/compiler/harbour.c
    + void hb_compGenWithObject( HB_EXPR_PTR pObject );  /* generate code for WITH OBJECT <obj> statement */
    + void hb_compGenEndWithObject( void );  /* generate code for END //WITH OBJECT <obj> statement */

  * include/hberrors.h
    + #define HB_COMP_ERR_UNMATCHED_WITHOBJECT        54
  * source/compiler/hbgenerr.c
    + "WITH Message [%s] with no WITH OBJECT in sight."

  * include/hbexprop.h
  * source/common/expropt1.c
  * include/hbexpra.c
  * include/hbexprb.c
  * include/hbexprc.c
  * source/compiler/harbour.slx
  * source/compiler/harbour.sly
    + Added support for: WITH OBJECT <obj> ; :WithProperty; :WithMethod([...]); END syntax
      /* Nested WITH OBJECT are supported up to HB_MAX_WITH_OBJECTS levels. */

  * source/compiler/genc.c
  * source/compiler/hbfix.c
  * source/compiler/hbpcode.c
  * include/hbpcode.h
  * source/vm/hvm.c