@@ -1,5 +1,5 @@
 /*
- * $Id: hvm.c,v 1.59 2002/04/21 01:39:17 ronpinkas Exp $
+ * $Id: hvm.c,v 1.60 2002/04/22 23:09:58 ronpinkas Exp $
  */
 
 /*
@@ -241,22 +241,22 @@ static int s_iBaseLine;
 
 char *hb_vm_sNull = "";
 
-unsigned char hb_vm_acAscii[256][2] = { { 0x00, 0 }, { 0x01, 0 }, { 0x02, 0 }, { 0x03, 0 }, { 0x04, 0 }, { 0x05, 0 }, { 0x06, 0 }, { 0x07, 0 }, { 0x08, 0 }, { 0x09, 0 }, { 0x0A, 0 }, { 0x0B, 0 }, { 0x0C, 0 }, { 0x0D, 0 }, { 0x0E, 0 }, { 0x0F, 0 },
-                                        { 0x10, 0 }, { 0x11, 0 }, { 0x12, 0 }, { 0x13, 0 }, { 0x14, 0 }, { 0x15, 0 }, { 0x16, 0 }, { 0x17, 0 }, { 0x18, 0 }, { 0x19, 0 }, { 0x1A, 0 }, { 0x1B, 0 }, { 0x1C, 0 }, { 0x1D, 0 }, { 0x1E, 0 }, { 0x1F, 0 },
-                                        { 0x20, 0 }, { 0x21, 0 }, { 0x22, 0 }, { 0x23, 0 }, { 0x24, 0 }, { 0x25, 0 }, { 0x26, 0 }, { 0x27, 0 }, { 0x28, 0 }, { 0x29, 0 }, { 0x2A, 0 }, { 0x2B, 0 }, { 0x2C, 0 }, { 0x2D, 0 }, { 0x2E, 0 }, { 0x2F, 0 },
-                                        { 0x30, 0 }, { 0x31, 0 }, { 0x32, 0 }, { 0x33, 0 }, { 0x34, 0 }, { 0x35, 0 }, { 0x36, 0 }, { 0x37, 0 }, { 0x38, 0 }, { 0x39, 0 }, { 0x3A, 0 }, { 0x3B, 0 }, { 0x3C, 0 }, { 0x3D, 0 }, { 0x3E, 0 }, { 0x3F, 0 },
-                                        { 0x40, 0 }, { 0x41, 0 }, { 0x42, 0 }, { 0x43, 0 }, { 0x44, 0 }, { 0x45, 0 }, { 0x46, 0 }, { 0x47, 0 }, { 0x48, 0 }, { 0x49, 0 }, { 0x4A, 0 }, { 0x4B, 0 }, { 0x4C, 0 }, { 0x4D, 0 }, { 0x4E, 0 }, { 0x4F, 0 },
-                                        { 0x50, 0 }, { 0x51, 0 }, { 0x52, 0 }, { 0x53, 0 }, { 0x54, 0 }, { 0x55, 0 }, { 0x56, 0 }, { 0x57, 0 }, { 0x58, 0 }, { 0x59, 0 }, { 0x5A, 0 }, { 0x5B, 0 }, { 0x5C, 0 }, { 0x5D, 0 }, { 0x5E, 0 }, { 0x5F, 0 },
-                                        { 0x60, 0 }, { 0x61, 0 }, { 0x62, 0 }, { 0x63, 0 }, { 0x64, 0 }, { 0x65, 0 }, { 0x66, 0 }, { 0x67, 0 }, { 0x68, 0 }, { 0x69, 0 }, { 0x6A, 0 }, { 0x6B, 0 }, { 0x6C, 0 }, { 0x6D, 0 }, { 0x6E, 0 }, { 0x6F, 0 },
-                                        { 0x70, 0 }, { 0x71, 0 }, { 0x72, 0 }, { 0x73, 0 }, { 0x74, 0 }, { 0x75, 0 }, { 0x76, 0 }, { 0x77, 0 }, { 0x78, 0 }, { 0x79, 0 }, { 0x7A, 0 }, { 0x7B, 0 }, { 0x7C, 0 }, { 0x7D, 0 }, { 0x7E, 0 }, { 0x7F, 0 },
-                                        { 0x80, 0 }, { 0x81, 0 }, { 0x82, 0 }, { 0x83, 0 }, { 0x84, 0 }, { 0x85, 0 }, { 0x86, 0 }, { 0x87, 0 }, { 0x88, 0 }, { 0x89, 0 }, { 0x8A, 0 }, { 0x8B, 0 }, { 0x8C, 0 }, { 0x8D, 0 }, { 0x8E, 0 }, { 0x8F, 0 },
-                                        { 0x90, 0 }, { 0x91, 0 }, { 0x92, 0 }, { 0x93, 0 }, { 0x94, 0 }, { 0x95, 0 }, { 0x96, 0 }, { 0x97, 0 }, { 0x98, 0 }, { 0x99, 0 }, { 0x9A, 0 }, { 0x9B, 0 }, { 0x9C, 0 }, { 0x9D, 0 }, { 0x9E, 0 }, { 0x9F, 0 },
-                                        { 0xA0, 0 }, { 0xA1, 0 }, { 0xA2, 0 }, { 0xA3, 0 }, { 0xA4, 0 }, { 0xA5, 0 }, { 0xA6, 0 }, { 0xA7, 0 }, { 0xA8, 0 }, { 0xA9, 0 }, { 0xAA, 0 }, { 0xAB, 0 }, { 0xAC, 0 }, { 0xAD, 0 }, { 0xAE, 0 }, { 0xAF, 0 },
-                                        { 0xB0, 0 }, { 0xB1, 0 }, { 0xB2, 0 }, { 0xB3, 0 }, { 0xB4, 0 }, { 0xB5, 0 }, { 0xB6, 0 }, { 0xB7, 0 }, { 0xB8, 0 }, { 0xB9, 0 }, { 0xBA, 0 }, { 0xBB, 0 }, { 0xBC, 0 }, { 0xBD, 0 }, { 0xBE, 0 }, { 0xBF, 0 },
-                                        { 0xC0, 0 }, { 0xC1, 0 }, { 0xC2, 0 }, { 0xC3, 0 }, { 0xC4, 0 }, { 0xC5, 0 }, { 0xC6, 0 }, { 0xC7, 0 }, { 0xC8, 0 }, { 0xC9, 0 }, { 0xCA, 0 }, { 0xCB, 0 }, { 0xCC, 0 }, { 0xCD, 0 }, { 0xCE, 0 }, { 0xCF, 0 },
-                                        { 0xD0, 0 }, { 0xD1, 0 }, { 0xD2, 0 }, { 0xD3, 0 }, { 0xD4, 0 }, { 0xD5, 0 }, { 0xD6, 0 }, { 0xD7, 0 }, { 0xD8, 0 }, { 0xD9, 0 }, { 0xDA, 0 }, { 0xDB, 0 }, { 0xDC, 0 }, { 0xDD, 0 }, { 0xDE, 0 }, { 0xDF, 0 },
-                                        { 0xE0, 0 }, { 0xE1, 0 }, { 0xE2, 0 }, { 0xE3, 0 }, { 0xE4, 0 }, { 0xE5, 0 }, { 0xE6, 0 }, { 0xE7, 0 }, { 0xE8, 0 }, { 0xE9, 0 }, { 0xEA, 0 }, { 0xEB, 0 }, { 0xEC, 0 }, { 0xED, 0 }, { 0xEE, 0 }, { 0xEF, 0 },
-                                        { 0xF0, 0 }, { 0xF1, 0 }, { 0xF2, 0 }, { 0xF3, 0 }, { 0xF4, 0 }, { 0xF5, 0 }, { 0xF6, 0 }, { 0xF7, 0 }, { 0xF8, 0 }, { 0xF9, 0 }, { 0xFA, 0 }, { 0xFB, 0 }, { 0xFC, 0 }, { 0xFD, 0 }, { 0xFE, 0 }, { 0xFF, 0 } };
+char *hb_vm_acAscii[256] = { "\x00", "\x01", "\x02", "\x03", "\x04", "\x05", "\x06", "\x07", "\x08", "\x09", "\x0A", "\x0B", "\x0C", "\x0D", "\x0E", "\x0F",
+                             "\x10", "\x11", "\x12", "\x13", "\x14", "\x15", "\x16", "\x17", "\x18", "\x19", "\x1A", "\x1B", "\x1C", "\x1D", "\x1E", "\x1F",
+                             "\x20", "\x21", "\x22", "\x23", "\x24", "\x25", "\x26", "\x27", "\x28", "\x29", "\x2A", "\x2B", "\x2C", "\x2D", "\x2E", "\x2F",
+                             "\x30", "\x31", "\x32", "\x33", "\x34", "\x35", "\x36", "\x37", "\x38", "\x39", "\x3A", "\x3B", "\x3C", "\x3D", "\x3E", "\x3F",
+                             "\x40", "\x41", "\x42", "\x43", "\x44", "\x45", "\x46", "\x47", "\x48", "\x49", "\x4A", "\x4B", "\x4C", "\x4D", "\x4E", "\x4F",
+                             "\x50", "\x51", "\x52", "\x53", "\x54", "\x55", "\x56", "\x57", "\x58", "\x59", "\x5A", "\x5B", "\x5C", "\x5D", "\x5E", "\x5F",
+                             "\x60", "\x61", "\x62", "\x63", "\x64", "\x65", "\x66", "\x67", "\x68", "\x69", "\x6A", "\x6B", "\x6C", "\x6D", "\x6E", "\x6F",
+                             "\x70", "\x71", "\x72", "\x73", "\x74", "\x75", "\x76", "\x77", "\x78", "\x79", "\x7A", "\x7B", "\x7C", "\x7D", "\x7E", "\x7F",
+                             "\x80", "\x81", "\x82", "\x83", "\x84", "\x85", "\x86", "\x87", "\x88", "\x89", "\x8A", "\x8B", "\x8C", "\x8D", "\x8E", "\x8F",
+                             "\x90", "\x91", "\x92", "\x93", "\x94", "\x95", "\x96", "\x97", "\x98", "\x99", "\x9A", "\x9B", "\x9C", "\x9D", "\x9E", "\x9F",
+                             "\xA0", "\xA1", "\xA2", "\xA3", "\xA4", "\xA5", "\xA6", "\xA7", "\xA8", "\xA9", "\xAA", "\xAB", "\xAC", "\xAD", "\xAE", "\xAF",
+                             "\xB0", "\xB1", "\xB2", "\xB3", "\xB4", "\xB5", "\xB6", "\xB7", "\xB8", "\xB9", "\xBA", "\xBB", "\xBC", "\xBD", "\xBE", "\xBF",
+                             "\xC0", "\xC1", "\xC2", "\xC3", "\xC4", "\xC5", "\xC6", "\xC7", "\xC8", "\xC9", "\xCA", "\xCB", "\xCC", "\xCD", "\xCE", "\xCF",
+                             "\xD0", "\xD1", "\xD2", "\xD3", "\xD4", "\xD5", "\xD6", "\xD7", "\xD8", "\xD9", "\xDA", "\xDB", "\xDC", "\xDD", "\xDE", "\xDF",
+                             "\xE0", "\xE1", "\xE2", "\xE3", "\xE4", "\xE5", "\xE6", "\xE7", "\xE8", "\xE9", "\xEA", "\xEB", "\xEC", "\xED", "\xEE", "\xEF",
+                             "\xF0", "\xF1", "\xF2", "\xF3", "\xF4", "\xF5", "\xF6", "\xF7", "\xF8", "\xF9", "\xFA", "\xFB", "\xFC", "\xFD", "\xFE", "\xFF" };
 
 
 HB_ITEM hb_vm_aWithObject[ HB_MAX_WITH_OBJECTS ];
@@ -3428,7 +3428,7 @@ static void hb_vmArrayPush( void )
       {
          if( pArray->item.asString.bStatic )
          {
-            pArray->item.asString.value   = (char *) ( hb_vm_acAscii[ (int) ( pArray->item.asString.value[lIndex] ) ] );
+            pArray->item.asString.value   = hb_vm_acAscii[ (unsigned char) ( pArray->item.asString.value[lIndex] ) ];
          }
          else
          {
@@ -3436,7 +3436,7 @@ static void hb_vmArrayPush( void )
 
             hb_itemReleaseString( pArray );
 
-            pArray->item.asString.value   = (char *) ( hb_vm_acAscii[ (int) cChar ] );
+            pArray->item.asString.value   = hb_vm_acAscii[ cChar ];
             pArray->item.asString.bStatic = TRUE;
          }
 
